# HelloWorld

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  hello_world_mpi.c
